--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hull Pixel Bot <img src="logo.png" width="100" height="50" align="middle"> </h1>
+						<h1>Hull Pixel Bot <img src="Logo.png" width="100" height="50" align="middle"> </h1>
 						<p>Self created project &nbsp;&bull;&nbsp; Robots &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
 						<nav>
 							<ul>
