--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Canvas not supported
       </canvas>
 		</div>
-			<div id="overlay"></div>
+			<!-- <div id="overlay"></div> -->
 			<div id="main">
 
 				<!-- Header -->
@@ -30,12 +30,14 @@
 						<p>Self created project &nbsp;&bull;&nbsp; Robots &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
 						<nav>
 							<ul>
+								<!--
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
+								-->
 						</nav>
 							<iframe id="forum_embed"
 		 						src="javascript:void(0)"
