--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Hull Pixel Bot <img src="Logo.png" width="100" height="50" align="middle"> </h1>
-						<p>Self created project &nbsp;&bull;&nbsp; Robots &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
+						<p>Arduino powered &nbsp;&bull;&nbsp; Easy to make &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
 						<nav>
 							<ul>
 								<!--
