--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-
+							<span class="copyright">&copy; HullPixelBot. Design: Dragu Cosmin <a href="http://cosminddragu.me">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
