--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 						<p>Arduino powered &nbsp;&bull;&nbsp; Easy to make &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
 						<nav>
 							<ul>
-								<!--
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+
+								<li><a href="http://www.thingiverse.com/thing:1540888" class="icon fa-code-fork"><span class="label">ThingVerse</span></a></li>
+								
+								<li><a href="http://static1.squarespace.com/static/5019271be4b0807297e8f404/t/572b11864c2f8564c3820714/1462440327778/HullPixelBot+Construction+Details.pdf" class="icon  fa-cog"><span class="label">Instructions</span></a></li>
+
+								<li><a href="http://www.robmiles.com/hullpixelbot/" class="icon fa-newspaper-o"><span class="label">RobMiles</span></a></li>
 							</ul>
-								-->
+
 						</nav>
 							<iframe id="forum_embed"
 		 						src="javascript:void(0)"
