--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hull Pixel Bot <img src="Logo.png" width="100" height="50" align="middle"> </h1>
+						<h1>Hull Pixel Bot <!-- <img src="Logo.png" width="100" height="50" align="middle"> --> </h1>
 						<p>Arduino powered &nbsp;&bull;&nbsp; Easy to make &nbsp;&bull;&nbsp; Hull Hardware Meetup</p>
 						<nav>
 							<ul>
 
 								<li><a href="http://www.thingiverse.com/thing:1540888" class="icon fa-code-fork"><span class="label">ThingVerse</span></a></li>
-								
+
 								<li><a href="http://static1.squarespace.com/static/5019271be4b0807297e8f404/t/572b11864c2f8564c3820714/1462440327778/HullPixelBot+Construction+Details.pdf" class="icon  fa-cog"><span class="label">Instructions</span></a></li>
 
 								<li><a href="http://www.robmiles.com/hullpixelbot/" class="icon fa-newspaper-o"><span class="label">RobMiles</span></a></li>
